--- a/webpack-intro/package.json
+++ b/webpack-intro/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.0"
+  },
+  "devDependencies": {
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
